maze.lessons.maze.island.IslandMaze.scala.error
Escaper:41: error: not found: value keepHandOnSideWall
          keepHandOnSideWall()
          ^Escaper:54: error: not found: value keepHandOnSideWall
          keepHandOnSideWall()
          ^